--- a/html/mycakeapp/.gitignore
+++ b/html/mycakeapp/.gitignore
@@ -42,3 +42,6 @@ nbproject/*
 .vscode
 # Sass preprocessor
 .sass-cache/
+# Movie_thumbnail_images & directly
+webroot/img/MovieThumbnails/*
+!webroot/img/MovieThumbnails/.gitkeep
