--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 services:
   nginx:
     image: nginx
@@ -7,24 +7,22 @@ services:
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./html:/var/www/html
+  # php:
+  #   build:
+  #     context: ./docker/php
+  #     args:
+  #       DOCKER_UID: ${DOCKER_UID:-1000}
+  #   volumes:
+  #     - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+  #     - ./html:/var/www/html
+  #   environment:
+  #     DEV_KEY: HOGEhogeHOGEhogeHOGEhogeHOGEhoge
   php:
     build:
-      context: ./docker/php
-      args:
-        DOCKER_UID: ${DOCKER_UID:-1000}
-    volumes:
-      - ./docker/php/php.ini:/usr/local/etc/php/php.ini
-      - ./html:/var/www/html
-    environment:
-      DEV_KEY: HOGEhogeHOGEhogeHOGEhogeHOGEhoge
+      context: .
+      dockerfile: ./Dockerfile
   mysql:
     build: ./docker/mysql
-    environment:
-      MYSQL_DATABASE: docker_db
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_USER: docker_db_user
-      MYSQL_PASSWORD: docker_db_user_pass
-      TZ: Asia/Tokyo
     volumes:
       - ./docker/mysql/data:/var/lib/mysql
   phpmyadmin:
