--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ docker/mysql/data
 phpmyadmin
 .env
 .vscode
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
