[fix]VPCグループを指定していなかったため修正

--- a/.ebextensions/https-lbsecuritygroup.config
+++ b/.ebextensions/https-lbsecuritygroup.config
@@ -8,7 +8,7 @@ Resources:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: load balancer security group
-      VpcId: vpc-#######
+      VpcId: vpc-07b8a649d87480469
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 443
