[update]一時的な画像ファイルの追加

--- a/html/mycakeapp/.gitignore
+++ b/html/mycakeapp/.gitignore
@@ -43,5 +43,5 @@ nbproject/*
 # Sass preprocessor
 .sass-cache/
 # Movie_thumbnail_images & directly
-webroot/img/MovieThumbnails/*
-!webroot/img/MovieThumbnails/.gitkeep
+# webroot/img/MovieThumbnails/*
+# !webroot/img/MovieThumbnails/.gitkeep
