--- a/html/mycakeapp/.htaccess
+++ b/html/mycakeapp/.htaccess
@@ -6,9 +6,11 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteCond    %{HTTP:X-Forwarded-Proto} !=https
-    RewriteRule    ^/?(.*) https://%{HTTP_HOST}/$1 [R,L]
     RewriteRule    ^(\.well-known/.*)$ $1 [L]
     RewriteRule    ^$    webroot/    [L]
     RewriteRule    (.*) webroot/$1    [L]
+    # Force HTTPS
+    RewriteCond %{HTTPS} !=on
+    RewriteCond    %{HTTP:X-Forwarded-Proto} !=https
+    RewriteRule    ^/?(.*) https://%{HTTP_HOST}/$1 [R,L]
 </IfModule>
