--- a/html/mycakeapp/.htaccess
+++ b/html/mycakeapp/.htaccess
@@ -6,11 +6,9 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteRule    ^(\.well-known/.*)$ $1
-    RewriteRule    ^$    webroot/
-    RewriteRule    (.*) webroot/$1
-    # Force HTTPS
     RewriteCond    %{HTTPS} !=on
     RewriteCond    %{HTTP:X-Forwarded-Proto} !=https
-    RewriteRule    ^/?(.*) https://%{HTTP_HOST}/$1 [R,L]
+    RewriteRule    ^(\.well-known/.*)$ $1 [L]
+    RewriteRule    ^$   https://webroot/ [L]
+    RewriteRule    (.*) https://webroot/$1 [L]
 </IfModule>
