--- a/html/mycakeapp/.htaccess
+++ b/html/mycakeapp/.htaccess
@@ -6,9 +6,7 @@
 
 <IfModule mod_rewrite.c>
     RewriteEngine on
-    RewriteCond    %{HTTPS} !=on
-    RewriteCond    %{HTTP:X-Forwarded-Proto} !=https
     RewriteRule    ^(\.well-known/.*)$ $1 [L]
-    RewriteRule    ^$   https://webroot/ [L]
-    RewriteRule    (.*) https://webroot/$1 [L]
+    RewriteRule    ^$    webroot/    [L]
+    RewriteRule    (.*) webroot/$1    [L]
 </IfModule>
